# backend/swagger.yml
@@ -9,23 +9,156 @@ schemes:
 paths:
   /posts:
     get:
-      summary: "GET posts"
+      summary: "Find posts"
+      description: "Returns a single post"
       produces:
         - "application/json"
       responses:
         200:
-          description: "success"
+          description: "successful operation"
           schema:
-            $ref: "#/definitions/Posts"
+            $ref: "#/definitions/Post"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+    post:
+      summary: "Create Post"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Pet object that needs to be added to the store"
+          required: true
+          schema:
+            $ref: "#/definitions/Post"
+      responses:
+        405:
+          description: "Invalid input"
+    put:
+      summary: "Update an existing post"
+      description: ""
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Pet object that needs to be added to the store"
+          required: true
+          schema:
+            $ref: "#/definitions/Post"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+        405:
+          description: "Validation exception"
+      security:
+        - petstore_auth:
+            - "write:pets"
+            - "read:pets"
+  /post/{id}:
+    get:
+      summary: "Find post by ID"
+      description: "Returns a single post"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID of pet to return"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Post"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+    delete:
+      summary: "Deletes a post"
+      description: ""
+      produces:
+        - "application/json"
+      parameters:
+        - name: "api_key"
+          in: "header"
+          required: false
+          type: "string"
+        - name: "petId"
+          in: "path"
+          description: "Pet id to delete"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+      security:
+        - petstore_auth:
+            - "write:pets"
+            - "read:pets"
 definitions:
-  Posts:
+  Pet:
+    type: "object"
+    required:
+      - "name"
+      - "photoUrls"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      category:
+        $ref: "#/definitions/Category"
+      name:
+        type: "string"
+        example: "doggie"
+      photoUrls:
+        type: "array"
+        xml:
+          name: "photoUrl"
+          wrapped: true
+        items:
+          type: "string"
+      tags:
+        type: "array"
+        xml:
+          name: "tag"
+          wrapped: true
+        items:
+          $ref: "#/definitions/Tag"
+      status:
+        type: "string"
+        description: "pet status in the store"
+        enum:
+          - "available"
+          - "pending"
+          - "sold"
+    xml:
+      name: "Pet"
+  ApiResponse:
     type: "object"
     properties:
-      userId:
-        type: "number"
-      id:
-        type: "number"
-      title:
+      code:
+        type: "integer"
+        format: "int32"
+      type:
         type: "string"
-      body:
+      message:
         type: "string"
+externalDocs:
+  description: "Find out more about Swagger"
+  url: "http://swagger.io"
